[gd_scene load_steps=25 format=3 uid="uid://dxko355fkpwmk"]

[ext_resource type="Script" path="res://framework/scripts/launch/login.gd" id="1_kcqpe"]
[ext_resource type="Texture2D" uid="uid://d341u62kwpqqn" path="res://framework/statics/scenes/launch/common/logo.png" id="2_7lmew"]
[ext_resource type="AudioStream" uid="uid://bvbw65l1ymwxq" path="res://framework/statics/music/launch.wav" id="2_pmerm"]
[ext_resource type="Texture2D" uid="uid://gehorhrirr84" path="res://framework/statics/scenes/launch/login/login_main.png" id="3_xw66n"]
[ext_resource type="Texture2D" uid="uid://b45gg8hpiplk7" path="res://framework/statics/scenes/launch/login/submit_button_0.png" id="4_w51df"]
[ext_resource type="Texture2D" uid="uid://ctjwft6gqe2g3" path="res://framework/statics/scenes/launch/login/submit_button_1.png" id="5_vvya0"]
[ext_resource type="Texture2D" uid="uid://chlr71idm5n61" path="res://framework/statics/scenes/launch/login/submit_button_2.png" id="6_m3wdk"]
[ext_resource type="Texture2D" uid="uid://b031h14t4xwo3" path="res://framework/statics/scenes/launch/login/register_button_0.png" id="7_8b2j4"]
[ext_resource type="Texture2D" uid="uid://bd35dc4l1e8tm" path="res://framework/statics/scenes/launch/login/register_button_1.png" id="8_c0e4j"]
[ext_resource type="Texture2D" uid="uid://dmo6dkj0ioxew" path="res://framework/statics/scenes/launch/login/register_button_2.png" id="9_uvt3x"]
[ext_resource type="Texture2D" uid="uid://b082gvt6q5ixk" path="res://framework/statics/scenes/launch/login/change_password_button_0.png" id="10_8ttj7"]
[ext_resource type="Texture2D" uid="uid://t7kg3my3w0nm" path="res://framework/statics/scenes/launch/login/change_password_button_1.png" id="11_seu6x"]
[ext_resource type="Texture2D" uid="uid://dpag5nu1w81e8" path="res://framework/statics/scenes/launch/login/change_password_button_2.png" id="12_o60j6"]
[ext_resource type="Texture2D" uid="uid://ddcbav0tdm2h8" path="res://framework/statics/scenes/launch/login/change_password.png" id="13_2imjr"]
[ext_resource type="Texture2D" uid="uid://c0ptxr6u21rdj" path="res://framework/statics/scenes/launch/common/confirm_button_0.png" id="14_nyv0p"]
[ext_resource type="Texture2D" uid="uid://dbar1cdnrm7ij" path="res://framework/statics/scenes/launch/common/confirm_button_1.png" id="15_b3cd6"]
[ext_resource type="Texture2D" uid="uid://dr1xcvg2c83p2" path="res://framework/statics/scenes/launch/common/confirm_button_2.png" id="16_8fobg"]
[ext_resource type="Texture2D" uid="uid://dyyjvttupuera" path="res://framework/statics/scenes/launch/common/cancel_button_0.png" id="17_pa6cg"]
[ext_resource type="Texture2D" uid="uid://dox3jnc4tx8uv" path="res://framework/statics/scenes/launch/common/cancel_button_1.png" id="18_iiobn"]
[ext_resource type="Texture2D" uid="uid://wtc4uposahm1" path="res://framework/statics/scenes/launch/common/cancel_button_2.png" id="19_uh6vx"]
[ext_resource type="Texture2D" uid="uid://bvgkv1m5ddkrk" path="res://framework/statics/scenes/launch/login/register.png" id="20_e3h1n"]
[ext_resource type="Texture2D" uid="uid://bculeox7mk7fh" path="res://framework/statics/scenes/launch/common/adolescent_icon.png" id="22_d5cdj"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_3msj6"]
color = Color(0, 0, 0, 0)
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ofu5q"]
color = Color(0, 0, 0, 0)
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcqpe")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pmerm")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.5
offset_top = -328.5
offset_right = 200.5
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7lmew")

[node name="Main" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = 11.5
offset_right = 281.0
offset_bottom = 266.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xw66n")

[node name="SubmitButton" type="TextureButton" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 16.5
offset_right = 110.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_w51df")
texture_pressed = ExtResource("5_vvya0")
texture_hover = ExtResource("6_m3wdk")

[node name="RegisterButton" type="TextureButton" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 78.5
offset_right = -39.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_8b2j4")
texture_pressed = ExtResource("8_c0e4j")
texture_hover = ExtResource("9_uvt3x")

[node name="ChangePasswordButton" type="TextureButton" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 39.0
offset_top = 78.5
offset_right = 161.0
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_8ttj7")
texture_pressed = ExtResource("11_seu6x")
texture_hover = ExtResource("12_o60j6")

[node name="EmailIpunt" type="LineEdit" parent="Main"]
layout_mode = 0
offset_left = 196.0
offset_top = 46.0
offset_right = 385.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxLine_3msj6")
placeholder_text = "请输入登录邮箱"
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="PasswordIpunt" type="LineEdit" parent="Main"]
layout_mode = 0
offset_left = 197.0
offset_top = 95.0
offset_right = 386.0
offset_bottom = 124.0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxLine_ofu5q")
placeholder_text = "请输入登录密码"
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true
caret_blink = true
secret = true

[node name="ChangePassword" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="TextureRect" parent="ChangePassword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -124.5
offset_right = 185.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_2imjr")

[node name="ConfirmButton" type="TextureButton" parent="ChangePassword/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = 69.0
offset_right = 37.5
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("14_nyv0p")
texture_pressed = ExtResource("15_b3cd6")
texture_hover = ExtResource("16_8fobg")
metadata/type = "change_password"

[node name="CancelButton" type="TextureButton" parent="ChangePassword/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 53.5
offset_top = 69.0
offset_right = 137.5
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_pa6cg")
texture_pressed = ExtResource("18_iiobn")
texture_hover = ExtResource("19_uh6vx")

[node name="Register" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="TextureRect" parent="Register"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -191.5
offset_right = 281.5
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_e3h1n")

[node name="ConfirmButton" type="TextureButton" parent="Register/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 141.5
offset_right = 104.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("14_nyv0p")
texture_pressed = ExtResource("15_b3cd6")
texture_hover = ExtResource("16_8fobg")

[node name="CancelButton" type="TextureButton" parent="Register/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 141.5
offset_right = 264.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_pa6cg")
texture_pressed = ExtResource("18_iiobn")
texture_hover = ExtResource("19_uh6vx")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 19.0
offset_right = 29.0
offset_bottom = 145.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("22_d5cdj")

[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
[connection signal="pressed" from="Main/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Main/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="Main/ChangePasswordButton" to="." method="_on_change_password_button_pressed"]
[connection signal="pressed" from="ChangePassword/Main/ConfirmButton" to="." method="_on_confirm_button_pressed" binds= ["change_password"]]
[connection signal="pressed" from="ChangePassword/Main/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Register/Main/ConfirmButton" to="." method="_on_confirm_button_pressed" binds= ["register"]]
[connection signal="pressed" from="Register/Main/CancelButton" to="." method="_on_cancel_button_pressed"]
